# Actividad-M3.5-Migraci-n-a-robot-real

./: .gitignore  README.md
mapas/: newpuzmap.pgm  newpuzmap.yaml
puzzlebot_description/urdf/: base.xacro  puzzlebot.urdf  puzzlebot.urdf.xacro  wheels.xacro
puzzlebot_gazebo/worlds/: maze_world.world
puzzlebot_navigation2/: CMakeLists.txt  package.xml
puzzlebot_navigation2/config/: nav2_params.yaml  slam_toolbox.yaml
puzzlebot_navigation2/scripts/: go_and_return.py  set_initial_pose.py
puzzlebot_real_robot/: CMakeLists.txt
puzzlebot_real_robot/config/: nav2_params_real.yaml  qos_edit.yaml  slam_toolbox_real.yaml
puzzlebot_real_robot/launch/: laptop_nav2.launch.xml  laptop_slam.launch.xml  real_robot_core.launch.xml  slam_real.launch.xml
puzzlebot_real_robot/maps/: README.md  map_maze_real.pgm  map_maze_real.yaml
puzzlebot_real_robot/scripts/: puzzlebot_localization.py
puzzlebot_ros2/: MANUAL_MIGRACION_M3.5.md
puzzlebot_ros2/mapas/: newpuzmap_edit.pgm  worldcorreg
puzzlebot_ros2/puzzlebot_gazebo/launch/: puzzlebot_gazebo.launch.py
puzzlebot_ros2/puzzlebot_gazebo/worlds/: maze_world.world.bak
puzzlebot_ros2/puzzlebot_navigation2/maps/: map_maze.pgm.bak  map_maze.yaml  map_maze.yaml.bak  map_maze_edited.pgm
puzzlebot_ros2/puzzlebot_real_robot/: CMakeLists.txt  README.md  package.xml
puzzlebot_ros2/puzzlebot_real_robot/launch/: nav2_real.launch.xml  real_robot_core.launch.xml
puzzlebot_ros2/puzzlebot_real_robot/scripts/: puzzlebot_joint_state_publisher.py
